[package]
name = "cheaters-swear-jar"
version = "0.1.0"
edition = "2021"

[dependencies]
aho-corasick = "1.1.3"
anyhow = "1.0.66"
reqwest = { version = "0.12.19", features = ["json"] }
serde = "1.0.197"
serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-runtime = "0.55.0"
shuttle-serenity = "0.55.0"
tokio = "1.26.0"
tracing = "0.1.37"
